Major Fixes to networking dynamic user selection from server