@@ -2,6 +2,7 @@ package com.example.posleticswear;
 
 import android.content.Context;
 import android.location.Location;
+import android.util.Log;
 
 import com.android.volley.Request;
 import com.android.volley.RequestQueue;
@@ -10,6 +11,7 @@ import com.android.volley.VolleyError;
 import com.android.volley.VolleyLog;
 import com.android.volley.toolbox.JsonArrayRequest;
 import com.android.volley.toolbox.JsonObjectRequest;
+import com.android.volley.toolbox.StringRequest;
 import com.android.volley.toolbox.Volley;
 
 import org.json.JSONArray;
@@ -17,6 +19,9 @@ import org.json.JSONException;
 import org.json.JSONObject;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -28,12 +33,14 @@ public class NetworkSingleton {
     private RequestQueue requestQueue;
     private static Context ctx;
 
+
+
     private String urlPos = "https://posletics.herokuapp.com/api/pos";
     private String urlGetRoute = "https://posletics.herokuapp.com/api/route?user_id=";
+    private String urlGetUsers = "https://posletics.herokuapp.com/api/users";
 
-    //TODO urls anpassen
-    private String urlPosUpvote = "https://posletics.herokuapp.com/api/pos";
-    private String urlPosDownvote = "https://posletics.herokuapp.com/api/pos";
+    private String urlPosUpvote = "https://posletics.herokuapp.com/api/pos/upvote/";
+    private String urlPosDownvote = "https://posletics.herokuapp.com/api/pos/downvote/";
 
     private NetworkSingleton(Context context) {
         ctx = context;
@@ -43,46 +50,76 @@ public class NetworkSingleton {
     public static synchronized NetworkSingleton getInstance(Context context) {
         if (instance == null) {
             instance = new NetworkSingleton(context);
+            instance.getAllPos();
+            instance.getUsersFromServer();
         }
+
+
         return instance;
     }
 
     //JsonObjectRequest jsonObjReq = new JsonObjectRequest(Method.GET,
           //  aUrl, null, new Response.Listener<JSONObject>(){
 
-
-    public void getRouteFromServer(final int userId) {
-
-        final JSONArray[] routeIds = new JSONArray[1];
+    public void getUsersFromServer(){
         JsonArrayRequest jsnArrq = new JsonArrayRequest(
                 Request.Method.GET,
-                urlGetRoute.concat(String.valueOf(userId)),
+                urlGetUsers,
                 null,
                 new Response.Listener<JSONArray>() {
                     @Override
                     public void onResponse(JSONArray response) {
-                        for(int i=0; i<response.length();++i){
+                        ArrayList<Integer> users = new ArrayList<>();
+                        for (int i =0; i<response.length();i++) {
                             try {
-                                int id = response.getJSONObject(i).getInt("id");
-                                RuntimeData.getInstance().addToRoute(id);
+                                users.add(Integer.valueOf(response.getJSONObject(i).getInt("id")));
                             } catch (JSONException e) {
                                 e.printStackTrace();
                             }
                         }
-                        if(RuntimeData.getInstance().getRoute()==null){
-                            RuntimeData.getInstance().setDiscoveryRadius(750d);
-                        }else{RuntimeData.getInstance().setDiscoveryRadius(500d);}
+                        Collections.sort(users);
+                        Log.i("1", "Users:" +users.size());
+                        RuntimeData.getInstance().setUsers(users);
                     }
                 },
                 new Response.ErrorListener() {
                     @Override
                     public void onErrorResponse(VolleyError error) {
-                        VolleyLog.d(TAG, "Error: " + error.getMessage());
-                       // hideProgressDialog();
+                        VolleyLog.d(TAG, "Error: Users :" + error.getMessage());
+                        //hideProgressDialog();
                     }
                 });
-
         getRequestQueue().add(jsnArrq);
+    }
+
+
+    public void getRouteFromServer(final int userId) {
+
+        StringRequest stringrq = new StringRequest(
+                urlGetRoute.concat(String.valueOf(userId)),
+                new Response.Listener<String>(){
+                    @Override
+                    public void onResponse(String response) {
+
+                        if (!response.isEmpty()) {
+                            String[] splited = response.substring(1,response.length()-1).split(",");
+                            for(int i = 0; i < splited.length; i++) {
+                                RuntimeData.getInstance().addToRoute(Integer.parseInt(splited[i]));
+                            }
+                        }
+
+                        if(RuntimeData.getInstance().getRoute()==null){
+                            RuntimeData.getInstance().setDiscoveryRadius(750d);
+                        }else{RuntimeData.getInstance().setDiscoveryRadius(500d);}
+                    }}, new Response.ErrorListener() {
+                      @Override
+                      public void onErrorResponse(VolleyError error) {
+                          VolleyLog.d(TAG, "Error: Route: " + error.getMessage());
+                          // hideProgressDialog();
+                       }
+                    });
+
+        getRequestQueue().add(stringrq);
 
 
     }
@@ -111,7 +148,7 @@ public class NetworkSingleton {
                 new Response.ErrorListener() {
                     @Override
                     public void onErrorResponse(VolleyError error) {
-                        VolleyLog.d(TAG, "Error: " + error.getMessage());
+                        VolleyLog.d(TAG, "Error: SendPos: " + error.getMessage());
                         //hideProgressDialog();
                     }
                 });
@@ -129,8 +166,8 @@ public class NetworkSingleton {
                 new Response.Listener<JSONArray>() {
                     @Override
                     public void onResponse(JSONArray response) {
-                        Map<Integer, Pos> posMap=null;
-                        for (int i =0; i<response.length();++i) {
+                        Map<Integer, Pos> posMap = new HashMap<>();
+                        for (int i =0; i<response.length();i++) {
                             try {
                                 double lat = response.getJSONObject(i).getDouble("lat");
                                 double lng = response.getJSONObject(i).getDouble("lng");
@@ -142,7 +179,7 @@ public class NetworkSingleton {
                                 JSONArray hashtags = response.getJSONObject(i).getJSONArray("hashtags");
                                 int first=0, second=0;
                                 String firstHashtag=null, secondHashtag=null;
-                                for(int j =0; j<=hashtags.length();++j){
+                                for(int j =0; j<hashtags.length();++j){
                                     if(hashtags.getJSONObject(j).getInt("upvotes")>= first){
                                         firstHashtag = hashtags.getJSONObject(j).getString("name");
                                         first= hashtags.getJSONObject(j).getInt("upvotes");
@@ -154,11 +191,11 @@ public class NetworkSingleton {
 
                                 ArrayList hashtagNames = new ArrayList<String>();
                                 hashtagNames.add(firstHashtag);
-                                hashtagNames.add(firstHashtag);
+                                hashtagNames.add(secondHashtag);
                                 toAdd.setHighestHashtags(hashtagNames);
 
 
-                                posMap.put(new Integer(id),toAdd);
+                                posMap.put(Integer.valueOf(id),toAdd);
 
                             } catch (JSONException e) {
                                 e.printStackTrace();
@@ -170,7 +207,7 @@ public class NetworkSingleton {
                 new Response.ErrorListener() {
                     @Override
                     public void onErrorResponse(VolleyError error) {
-                        VolleyLog.d(TAG, "Error: " + error.getMessage());
+                        VolleyLog.d(TAG, "Error: GetAllPos:" + error.getMessage());
                         //hideProgressDialog();
                     }
                 });
@@ -190,30 +227,48 @@ public class NetworkSingleton {
 
 
     public void upvotePos(int id){
-        //TODO
+        JsonObjectRequest jsonObjReq = new JsonObjectRequest(
+                Request.Method.POST,
+                urlPosUpvote.concat(String.valueOf(id)),
+                new JSONObject(),
+                new Response.Listener<JSONObject>() {
+
+                    @Override
+                    public void onResponse(JSONObject response) {
+                        //hideProgressDialog();
+                    }
+                },
+                new Response.ErrorListener() {
+                    @Override
+                    public void onErrorResponse(VolleyError error) {
+                        VolleyLog.d(TAG, "Error: UpvotePos: " + error.getMessage());
+                        //hideProgressDialog();
+                    }
+                });
+        getRequestQueue().add(jsonObjReq);
     }
     public void downvotePos(int id){
-        //TODO
+        JsonObjectRequest jsonObjReq = new JsonObjectRequest(
+                Request.Method.POST,
+                urlPosDownvote.concat(String.valueOf(id)),
+                new JSONObject(),
+                new Response.Listener<JSONObject>() {
+
+                    @Override
+                    public void onResponse(JSONObject response) {
+                        //hideProgressDialog();
+                    }
+                },
+                new Response.ErrorListener() {
+                    @Override
+                    public void onErrorResponse(VolleyError error) {
+                        VolleyLog.d(TAG, "Error: downvotePos:" + error.getMessage());
+                        //hideProgressDialog();
+                    }
+                });
+        getRequestQueue().add(jsonObjReq);
+
     }
 
-    private JSONObject findObjInJsonArray(String key, String value, JSONArray jsonArray) {
-        JSONObject result = null;
-
-        for (int i = 0; i < jsonArray.length(); ++i) {
-            boolean decider = false;
-            JSONObject jsonObject;
-            try {
-                jsonObject=jsonArray.getJSONObject(i);
-                decider = jsonArray.getJSONObject(i).getString(key).equalsIgnoreCase(value);
-            } catch (JSONException je) {
-                je.printStackTrace();
-                return null;
-            }
-            if (decider)
-            { result = jsonObject;
-            }
-        }
-        return result;
-    }
 
 }
